======================================
9999-99-99 99:99:99.999999Z (untagged)
======================================

  2009-03-27 20:38:41 (r2511) by rcaputo; poe/lib/POE.pm M

    New dev release to address issues with Andreas Koenig's smoker. He's
    setting a DISPLAY that cannot be reached.

  2009-03-27 20:17:27 (r2510) by rcaputo; poe/mylib/PoeBuildInfo.pm M

    Avoid IO::Pty crashes on fbsd 6.4 with perl 5.8.8.

  2009-03-27 20:02:21 (r2509) by rcaputo; poe/lib/POE/Loop/Gtk.pm M

    Skip Gtk tests if Gtk cannot be initialized.

  2009-03-27 17:35:31 (r2508) by rcaputo; poe/lib/POE/Loop/Tk.pm M

    Skip Tk tests if Tk cannot be started.

  2009-03-27 16:28:34 (r2507) by rcaputo
  poe/lib/POE.pm M; poe/MANIFEST M

    Remove a new test that segfaults for some people, and bump the
    version for another (hopefully final) dev release.

  2009-03-14 20:43:28 (r2506) by bingosnet; poe/lib/POE/NFA.pm M

    Minor pod fixes in POE::NFA

  2009-03-12 00:54:24 (r2505) by apocal
  poe/lib/POE/Component/Server/TCP.pm M

    tiny comment tweak

  2009-03-11 23:18:36 (r2504) by rcaputo
  poe/lib/POE/Component/Server/TCP.pm M

    Fix Apocalypse's last patch's style to match the rest of POE.

  2009-03-11 18:02:21 (r2503) by apocal
  poe/lib/POE/Component/Server/TCP.pm M

    Use POE::Kernel::ASSERT_USAGE as recommended by rcaputo + POD tweaks

  2009-03-11 17:47:37 (r2502) by apocal
  poe/lib/POE/Component/Server/TCP.pm M

    Add sanity check to Server::TCP's
    InlineStates/PackageStates/ObjectStates constructor, thanks crab@irc!

  2009-03-11 02:28:50 (r2501) by rcaputo; poe/lib/POE/Kernel.pm M

    Fix a doc typo reported by Abhijit Menon-Sen.

  2009-03-11 02:14:13 (r2500) by apocal; poe/lib/POE/Kernel.pm M

    POD tweak, thanks crab from irc!

  2009-03-10 23:33:23 (r2499) by apocal; poe/lib/POE/Kernel.pm M

    Typo in POD, pointed out by Hinrik - thanks!

  2009-03-07 19:08:57 (r2496) by rcaputo; poe/lib/POE.pm M
